[fix/#103] 공정성 지표 일부 계산 불가 시 감사 전체 실패 방지